// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $295,324.24
  </h1>
</div>
`;

exports[`should render ExpenseSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.95
  </h1>
</div>
`;
